making b1.7 resourceExtensions work properly (and some more porting)